Load compliments from a wiki
The compliments are loaded from a wiki page, which should contain the
compliments as a list of plain text items. Since our usecase uses a
non-public wiki, the code logs in with credentials obtained from the
configuration file.

--- a/config.py.example
+++ b/config.py.example
@@ -1,2 +1,7 @@
 password = 'editme'
 # suppress_send = True
+wikiurl = 'https://wiki.wikimedia.de/w/index.php'
+complimentspage = 'Compliments'
+wikiuser = 'editme'
+wikipassword = 'editme'
+wikidomain = ''
