Make address loading configurable
The URL from which recipient email addresses are loaded is made
configurable, and emails are parsed from <a href="mailto:…"> elements
instead of assuming that email addresses end in wikimedia.de.

--- a/config.py.example
+++ b/config.py.example
@@ -1,5 +1,6 @@
 password = 'editme'
 # suppress_send = True
+emailspage = 'https://www.wikimedia.de/wiki/Mitarbeitende'
 wikiurl = 'https://wiki.wikimedia.de/w/index.php'
 complimentspage = 'Compliments'
 wikiuser = 'editme'
