Add comments to config.py.example

--- a/config.py.example
+++ b/config.py.example
@@ -1,12 +1,12 @@
-mail_server='editme',
-mail_port=465,
-mail_use_ssl=True,
-mail_username='editme',
-mail_password = 'editme'
-# suppress_send = True
-emailspage = 'https://www.wikimedia.de/wiki/Mitarbeitende'
-wikiurl = 'https://wiki.wikimedia.de/w/index.php'
-complimentspage = 'Compliments'
-wikiuser = 'editme'
-wikipassword = 'editme'
-wikidomain = ''
+mail_server='editme' # address of the mail server for sending mail, e.g. smtp-out.example.com
+mail_port=465 # port number of the mail server for sending mail
+mail_use_ssl=True # whether to use SSL (True) or not (False)
+mail_username='editme' # username at the mail server for sending mail
+mail_password = 'editme' # password for the username to send out mail
+# suppress_send = True # whether to supress sending mail (for testing)
+emailspage = 'https://www.wikimedia.de/wiki/Mitarbeitende' # wiki page with e-mail addresses of all your colleagues
+wikiurl = 'https://wiki.wikimedia.de/w/index.php' # login endpoint for wiki page with compliments
+complimentspage = 'Compliments' # name of the compliments page
+wikiuser = 'editme' # username for wiki with compliments page
+wikipassword = 'editme' # password for wiki with compliments page
+wikidomain = '' # LDAP domain for login (optional)
